# gcrecomp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  BRINGING_UP_A_GAME.md
include/gcrecomp/: cfg.h  dol.h  ppc.h  ppc_helpers.h  ppc_to_c.h  rarc.h  rel.h  runtime.h  symbol_map.h  yaz0.h
include/gcrecomp/audio/: audio.h
include/gcrecomp/gx/: gx.h
include/gcrecomp/hw/: gc_hw.h  os_defs.h
include/gcrecomp/input/: input.h
src/audio/: audio_mixer.cpp  audio_system.cpp  dsp_decoder.cpp
src/example/: main.cpp
src/gx/: gx_core.cpp  gx_display_list.cpp  gx_matrix.cpp  gx_tev.cpp  gx_texobj.cpp  gx_texture.cpp  gx_vertex.cpp
src/gx/d3d11/: d3d11_backend.cpp  d3d11_shaders.cpp
src/input/: input_system.cpp  pad_mapping.cpp
src/os/: os_funcs.cpp  rarc.cpp  yaz0.cpp
src/runtime/: func_table.cpp  memory.cpp  ppc_context.cpp
tools/: dolphin_dump.py
tools/dol_info/: main.cpp
tools/recompiler/: cfg_builder.cpp  dol_parser.cpp  main.cpp  ppc_disasm.cpp  ppc_to_c.cpp  symbol_map.cpp
